feature/0.8.x Added/implemented 'rods from god' -> kinetic weapon delivered via rocket launch; added related item, entities, recipe, technology, and settings; fixed? several technology ingredient settings not actually being configurable; added the 'payload-vehicle' -> intending to use this for other non-atomic munitions/for MIRVs; need to revisit/fully implement the quality custom-tooltips for rod-from-god

--- a/configurable-nukes/locale/en/custom-tooltip-fields.cfg
+++ b/configurable-nukes/locale/en/custom-tooltip-fields.cfg
@@ -5,6 +5,7 @@ effect=[img=cn-damage-icon] [color=yellow]Effect[/color]
 kr-radioactive=Radioactive
 kr-explosion=Explosion
 explosion=Explosion
+physical=Physical
 
 [quality-destroy-cliffs]
 aoe-size=Area of effect size:
