--- a/configurable-nukes/locale/en/items.cfg
+++ b/configurable-nukes/locale/en/items.cfg
@@ -8,6 +8,12 @@ configurable-nukes-atomic-warhead-cooldown-modifier=[item=atomic-warhead]Cooldow
 configurable-nukes-atomic-warhead-stack-size=[item=atomic-warhead]Stack size
 configurable-nukes-atomic-warhead-weight-modifier=[item=atomic-warhead]Weight modifier
 
+configurable-nukes-payload-vehicle-stack-size=[item=cn-payload-vehicle]Stack size
+configurable-nukes-payload-vehicle-weight-modifier=[item=cn-payload-vehicle]Weight modifier
+
+configurable-nukes-rod-from-god-stack-size=[item=cn-rod-from-god]Stack size
+configurable-nukes-rod-from-god-weight-modifier=[item=cn-rod-from-god]Weight modifier
+
 configurable-nukes-rocket-control-unit-range-modifier=[item=rocket-control-unit]Range modifier
 configurable-nukes-rocket-control-unit-cooldown-modifier=[item=rocket-control-unit]Cooldown modifier
 configurable-nukes-rocket-control-unit-stack-size=[item=rocket-control-unit]Stack size
@@ -23,7 +29,11 @@ configurable-nukes-ballistic-rocket-part-weight-modifier=[item=rocket-part]Weigh
 configurable-nukes-cooldown-modifier=Multiplier of the cooldown between shots.\n\ni.e. The lower this number, the faster nukes can be fired.
 configurable-nukes-atomic-bomb-weight-modifier=Multiplier of the default weight of a atomic-rocket\n\n i.e. default = 1.5 * tons
 
-configurable-nukes-atomic-warhead-weight-modifier=Multiplier of the default weight of a atomic  warhead\n\n i.e. default = 1 * tons
+configurable-nukes-atomic-warhead-weight-modifier=Multiplier of the default weight of a atomic warhead\n\n i.e. default = 1 * tons
+
+configurable-nukes-payload-vehicle-weight-modifier=Multiplier of the default weight of a payload vehicle\n\n i.e. default = 1 * tons
+
+configurable-nukes-rod-from-god-weight-modifier=Multiplier of the default weight of a rod from god\n\n i.e. default = 1 * tons
 
 configurable-nukes-rocket-control-unit-weight-modifier=Multiplier of the default weight of a rocket-control-unit\n\n i.e. default = 0.2 * tons
 
