--- a/configurable-nukes/locale/en/locale.cfg
+++ b/configurable-nukes/locale/en/locale.cfg
@@ -38,6 +38,9 @@ se-ipbm-rocket-part-intermediate=Ballistic Rocket Part
 se-ipbm-rocket-part-advanced=Ballistic Rocket Part
 se-ipbm-rocket-part-beyond=Ballistic Rocket Part
 
+cn-payload-vehicle=Payload Vehicle
+cn-rod-from-god=Rod from God
+
 [item-description]
 atomic-warhead=Expensive yet devastating form of weaponry. Even more powerful version of the atomic bomb, but only fireable from a rocket-silo via an ICBM-remote [item=ICBM-remote] or via a circuit network.
 ipbm-rocket-silo=Rocket silo capable of local orbital logistics, as well as launching and deliverying payloads across interplanetary distances.
@@ -48,6 +51,7 @@ nuclear-damage-bonus=Nuclear damage: +__1__
 nuclear-artillery-damage-bonus=Nuclear artillery damage: +__1__
 icbm-guidance-damage-bonus=Deviation Chance: __1__
 icbm-top-speed-damage-bonus=Top Speed: +__1__
+kinetic-weapon-damage-bonus=Kinetic weapon damage: +__1__
 
 [recipe-name]
 atomic-warhead=Atomic Warhead
@@ -69,6 +73,8 @@ se-ipbm-rocket-part-intermediate=Ballistic Rocket Part
 se-ipbm-rocket-part-advanced=Ballistic Rocket Part
 se-ipbm-rocket-part-beyond=Ballistic Rocket Part
 
+cn-payload-vehicle=Payload Vehicle
+cn-rod-from-god=Rod from God
 
 [technology-name]
 atomic-warhead=Atomic Warhead
@@ -78,6 +84,7 @@ rocket-control-unit=Rocket Control Unit
 icbms=Intercontinental Ballistic Missiles
 ipbms=Interplanetary Ballistic Missiles
 se-ipbms=Interplanetary and Interstellar Ballistic Missiles
+cn-rod-from-god=Rod from God
 
 [technology-description]
 atomic-warhead=Allows the crafting of atomic warheads[item=atomic-warhead]; launchable via a rocket silo[entity=rocket-silo] at a designated target via the ICBM remote[item=ICBM-remote] or via a circuit network.
@@ -87,3 +94,4 @@ ipbms=Unlocks a rocket silo capable of launching and deliverying payloads to ano
 se-ipbms=Unlocks a rocket silo capable of launching and deliverying payloads across vast interplanetary and interstellar distances.
 guidance-systems=Improves the guidance systems of ballistic missiles: reduces the target deviation chance, and increases the top speed at which they can travel.
 rocket-control-unit=Allows the crafting of rocket control units [item=rocket-control-unit]
+cn-rod-from-god=Allows the crafting of Rods from God [item=cn-rod-from-god]\nKinetic weapon capable of destruction on par with atomic munitions, without the radioactive fallout.
