--- a/configurable-nukes/locale/en/startup.cfg
+++ b/configurable-nukes/locale/en/startup.cfg
@@ -22,10 +22,29 @@ configurable-nukes-atomic-warhead-recipe-allow-none=[item=atomic-warhead]Allow n
 configurable-nukes-atomic-warhead-crafting-machine=[item=atomic-warhead]Atomic warhead crafting machine
 configurable-nukes-atomic-warhead-additional-crafting-machines=[item=atomic-warhead]Additional atomic warhead crafting machines
 
+configurable-nukes-payload-vehicle-recipe=[item=cn-payload-vehicle]Recipe
+configurable-nukes-payload-vehicle-recipe-allow-none=[item=cn-payload-vehicle]Allow no recipe
+configurable-nukes-payload-vehicle-crafting-machine=[item=cn-payload-vehicle]Payload vehicle crafting machine
+configurable-nukes-payload-vehicle-additional-crafting-machines=[item=cn-payload-vehicle]Additional payload vehicle crafting machines
+
+configurable-nukes-rod-from-god-area-multiplier=[item=cn-rod-from-god]Area of Effect Multiplier
+configurable-nukes-rod-from-god-damage-multiplier=[item=cn-rod-from-god]Damage Multiplier
+configurable-nukes-rod-from-god-repeat-multiplier=[item=cn-rod-from-god]Repeat Multiplier
+configurable-nukes-rod-from-god-fire-wave=[item=cn-rod-from-god]Fire Wave
+configurable-nukes-rod-from-god-recipe=[item=cn-rod-from-god]Recipe
+configurable-nukes-rod-from-god-recipe-allow-none=[item=cn-rod-from-god]Allow no recipe
+configurable-nukes-rod-from-god-crafting-machine=[item=cn-rod-from-god]Rod from god crafting machine
+configurable-nukes-rod-from-god-additional-crafting-machines=[item=cn-rod-from-god]Additional rod from god crafting machines
+
 configurable-nukes-atomic-warhead-research-prerequisites=[item=atomic-warhead]Prerequisite technology to atomic-warhead research
 configurable-nukes-atomic-warhead-research-ingredients=[item=atomic-warhead]Science packs required for atomic-warhead reseach
 configurable-nukes-atomic-warhead-research-time=[item=atomic-warhead]Time per science pack for atomic-warhead research
 configurable-nukes-atomic-warhead-research-count=[item=atomic-warhead]Research count for atomic-warhead research
+
+configurable-nukes-rod-from-god-research-prerequisites=[item=cn-rod-from-god]Prerequisite technology to rod from god research
+configurable-nukes-rod-from-god-research-ingredients=[item=cn-rod-from-god]Science packs required for rod from god research
+configurable-nukes-rod-from-god-research-time=[item=cn-rod-from-god]Time per science pack for rod from god research
+configurable-nukes-rod-from-god-research-count=[item=cn-rod-from-god]Research count for rod from god research
 
 configurable-nukes-icbms-research-prerequisites=[technology=icbms]Prerequisite technology to ICBMs research
 configurable-nukes-icbms-research-ingredients=[technology=icbms]Science packs required for ICBMs reseach
