Added TheEckelmonster-core-library as a required dependency; switched to using TECL Log, Event_Handler, Settings_Controller, Settings_Service, Setings_Utils, and Core_Utils - tidying up as a result across many files; updated commands to use Core_Utils; updated printe_event_handlers command to print to a file instead of logging; deleted several unnecesary files; added an on_init event handler; removed version checking/validation from configurable_nuke_controller's on_tick event

--- a/configurable-nukes/locale/en/messages.cfg
+++ b/configurable-nukes/locale/en/messages.cfg
@@ -7,6 +7,8 @@ space-launch-seconds-to-target=Seconds to Target-__2__: __1__
 [configurable-nukes-controller]
 seconds-to-target=Seconds to Target-__1__: __2__
 seconds-to-target-gps=Seconds to Target-__1__: __2__ [gps=__3__,__4__,__5__]
+
+[configurable-nukes]
 on-configuration-changed=__1__: Version change detected
 
 [initialization]
