feature/0.8.x Created/added 'jericho' warheads and 'mjolnir' warheads: entities, items, recipes, technologies, and settings

--- a/configurable-nukes/locale/en/items.cfg
+++ b/configurable-nukes/locale/en/items.cfg
@@ -14,6 +14,12 @@ configurable-nukes-payload-vehicle-weight-modifier=[item=cn-payload-vehicle]Weig
 configurable-nukes-rod-from-god-stack-size=[item=cn-rod-from-god]Stack size
 configurable-nukes-rod-from-god-weight-modifier=[item=cn-rod-from-god]Weight modifier
 
+configurable-nukes-jericho-stack-size=[item=cn-jericho]Stack size
+configurable-nukes-jericho-weight-modifier=[item=cn-jericho]Weight modifier
+
+configurable-nukes-tesla-rocket-stack-size=[item=cn-tesla-rocket]Stack size
+configurable-nukes-tesla-rocket-weight-modifier=[item=cn-tesla-rocket]Weight modifier
+
 configurable-nukes-rocket-control-unit-range-modifier=[item=rocket-control-unit]Range modifier
 configurable-nukes-rocket-control-unit-cooldown-modifier=[item=rocket-control-unit]Cooldown modifier
 configurable-nukes-rocket-control-unit-stack-size=[item=rocket-control-unit]Stack size
@@ -34,6 +40,10 @@ configurable-nukes-atomic-warhead-weight-modifier=Multiplier of the default weig
 configurable-nukes-payload-vehicle-weight-modifier=Multiplier of the default weight of a payload vehicle\n\n i.e. default = 1 * tons
 
 configurable-nukes-rod-from-god-weight-modifier=Multiplier of the default weight of a rod from god\n\n i.e. default = 1 * tons
+
+configurable-nukes-jericho-weight-modifier=Multiplier of the default weight of a jericho warhead\n\n i.e. default = 1 * tons
+
+configurable-nukes-tesla-rocket-weight-modifier=Multiplier of the default weight of a mjölnir warhead\n\n i.e. default = 1 * tons
 
 configurable-nukes-rocket-control-unit-weight-modifier=Multiplier of the default weight of a rocket-control-unit\n\n i.e. default = 0.2 * tons
 
