--- a/configurable-nukes/locale/en/recipe.cfg
+++ b/configurable-nukes/locale/en/recipe.cfg
@@ -15,6 +15,14 @@ configurable-nukes-rod-from-god-crafting-time=[item=cn-rod-from-god]Rod from god
 configurable-nukes-rod-from-god-input-multiplier=[item=cn-rod-from-god]Input multiplier
 configurable-nukes-rod-from-god-result-count=[item=cn-rod-from-god]Result count
 
+configurable-nukes-jericho-crafting-time=[item=cn-jericho]Jericho crafting time
+configurable-nukes-jericho-input-multiplier=[item=cn-jericho]Input multiplier
+configurable-nukes-jericho-result-count=[item=cn-jericho]Result count
+
+configurable-nukes-tesla-rocket-crafting-time=[item=cn-tesla-rocket]Mjölnir crafting time
+configurable-nukes-tesla-rocket-input-multiplier=[item=cn-tesla-rocket]Input multiplier
+configurable-nukes-tesla-rocket-result-count=[item=cn-tesla-rocket]Result count
+
 configurable-nukes-rocket-control-unit-crafting-time=[item=rocket-control-unit]Rocket control unit crafting time
 configurable-nukes-rocket-control-unit-input-multiplier=[item=rocket-control-unit]Input multiplier
 configurable-nukes-rocket-control-unit-result-count=[item=rocket-control-unit]Result count
@@ -58,6 +66,9 @@ configurable-nukes-payload-vehicle-result-count=Number of items created per craf
 
 configurable-nukes-rod-from-god-crafting-time=Crafting time in seconds
 configurable-nukes-rod-from-god-result-count=Number of items created per crafting cycle
+
+configurable-nukes-jericho-crafting-time=Crafting time in seconds
+configurable-nukes-jericho-result-count=Number of items created per crafting cycle
 
 configurable-nukes-rocket-control-unit-crafting-time=Crafting time in seconds
 configurable-nukes-rocket-control-unit-result-count=Number of items created per crafting cycle
