--- a/configurable-nukes/locale/en/locale.cfg
+++ b/configurable-nukes/locale/en/locale.cfg
@@ -10,6 +10,7 @@ atomic-rocket=Atomic Bomb
 atomic-warhead=Atomic Warhead
 ipbm-rocket-silo=Interplanetary Ballistic Rocket Silo
 se-ipbm-rocket-silo=Ballistic Rocket Silo
+cn-explosive-rocket=Jericho sub-rocket
 # K2SO
 kr-atomic-artillery-projectile=Nuclear Artillery
 kr-nuclear-turret-rocket-projectile=Nuclear Turret Rocket
@@ -40,6 +41,8 @@ se-ipbm-rocket-part-beyond=Ballistic Rocket Part
 
 cn-payload-vehicle=Payload Vehicle
 cn-rod-from-god=Rod from God
+cn-jericho=Jericho
+cn-tesla-rocket=Mjölnir
 
 [item-description]
 atomic-warhead=Expensive yet devastating form of weaponry. Even more powerful version of the atomic bomb, but only fireable from a rocket-silo via an ICBM-remote [item=ICBM-remote] or via a circuit network.
@@ -52,6 +55,7 @@ nuclear-artillery-damage-bonus=Nuclear artillery damage: +__1__
 icbm-guidance-damage-bonus=Deviation Chance: __1__
 icbm-top-speed-damage-bonus=Top Speed: +__1__
 kinetic-weapon-damage-bonus=Kinetic weapon damage: +__1__
+tesla-rocket-damage-bonus=Mjölnir damage: +__1__
 
 [recipe-name]
 atomic-warhead=Atomic Warhead
@@ -75,6 +79,8 @@ se-ipbm-rocket-part-beyond=Ballistic Rocket Part
 
 cn-payload-vehicle=Payload Vehicle
 cn-rod-from-god=Rod from God
+cn-jericho=Jericho
+cn-tesla-rocket=Mjölnir
 
 [technology-name]
 atomic-warhead=Atomic Warhead
@@ -85,6 +91,8 @@ icbms=Intercontinental Ballistic Missiles
 ipbms=Interplanetary Ballistic Missiles
 se-ipbms=Interplanetary and Interstellar Ballistic Missiles
 cn-rod-from-god=Rod from God
+cn-jericho=Jericho
+cn-tesla-rocket=Mjölnir
 
 [technology-description]
 atomic-warhead=Allows the crafting of atomic warheads[item=atomic-warhead]; launchable via a rocket silo[entity=rocket-silo] at a designated target via the ICBM remote[item=ICBM-remote] or via a circuit network.
@@ -95,3 +103,5 @@ se-ipbms=Unlocks a rocket silo capable of launching and deliverying payloads acr
 guidance-systems=Improves the guidance systems of ballistic missiles: reduces the target deviation chance, and increases the top speed at which they can travel.
 rocket-control-unit=Allows the crafting of rocket control units [item=rocket-control-unit]
 cn-rod-from-god=Allows the crafting of Rods from God [item=cn-rod-from-god]\nKinetic weapon capable of destruction on par with atomic munitions, without the radioactive fallout.
+cn-jericho=Allows the crafting of Jericho warheads [item=cn-jericho]\nSingle rocket that seperates and deploys multiple explosive sub-rockets in a large area.
+cn-tesla-rocket=Allows the crafting of Mjölnir warheads [item=cn-tesla-rocket]
