--- a/configurable-nukes/locale/en/startup.cfg
+++ b/configurable-nukes/locale/en/startup.cfg
@@ -36,6 +36,24 @@ configurable-nukes-rod-from-god-recipe-allow-none=[item=cn-rod-from-god]Allow no
 configurable-nukes-rod-from-god-crafting-machine=[item=cn-rod-from-god]Rod from god crafting machine
 configurable-nukes-rod-from-god-additional-crafting-machines=[item=cn-rod-from-god]Additional rod from god crafting machines
 
+configurable-nukes-jericho-area-multiplier=[item=cn-jericho]Area of Effect Multiplier
+configurable-nukes-jericho-damage-multiplier=[item=cn-jericho]Damage Multiplier
+configurable-nukes-jericho-repeat-multiplier=[item=cn-jericho]Repeat Multiplier
+configurable-nukes-jericho-sub-rocket-repeat-multiplier=[item=cn-jericho]Sub-rocket Repeat Multiplier
+configurable-nukes-jericho-recipe=[item=cn-jericho]Recipe
+configurable-nukes-jericho-recipe-allow-none=[item=cn-jericho]Allow no recipe
+configurable-nukes-jericho-crafting-machine=[item=cn-jericho]Jericho crafting machine
+configurable-nukes-jericho-additional-crafting-machines=[item=cn-jericho]Additional jericho crafting machines
+
+configurable-nukes-tesla-rocket-area-multiplier=[item=cn-tesla-rocket]Area of Effect Multiplier
+configurable-nukes-tesla-rocket-damage-multiplier=[item=cn-tesla-rocket]Damage Multiplier
+configurable-nukes-tesla-rocket-repeat-multiplier=[item=cn-tesla-rocket]Repeat Multiplier
+configurable-nukes-tesla-rocket-sub-rocket-repeat-multiplier=[item=cn-tesla-rocket]Sub-rocket Repeat Multiplier
+configurable-nukes-tesla-rocket-recipe=[item=cn-tesla-rocket]Recipe
+configurable-nukes-tesla-rocket-recipe-allow-none=[item=cn-tesla-rocket]Allow no recipe
+configurable-nukes-tesla-rocket-crafting-machine=[item=cn-tesla-rocket]Mjölnir crafting machine
+configurable-nukes-tesla-rocket-additional-crafting-machines=[item=cn-tesla-rocket]Additional mjölnir crafting machines
+
 configurable-nukes-atomic-warhead-research-prerequisites=[item=atomic-warhead]Prerequisite technology to atomic-warhead research
 configurable-nukes-atomic-warhead-research-ingredients=[item=atomic-warhead]Science packs required for atomic-warhead reseach
 configurable-nukes-atomic-warhead-research-time=[item=atomic-warhead]Time per science pack for atomic-warhead research
@@ -45,6 +63,16 @@ configurable-nukes-rod-from-god-research-prerequisites=[item=cn-rod-from-god]Pre
 configurable-nukes-rod-from-god-research-ingredients=[item=cn-rod-from-god]Science packs required for rod from god research
 configurable-nukes-rod-from-god-research-time=[item=cn-rod-from-god]Time per science pack for rod from god research
 configurable-nukes-rod-from-god-research-count=[item=cn-rod-from-god]Research count for rod from god research
+
+configurable-nukes-jericho-research-prerequisites=[item=cn-jericho]Prerequisite technology to jericho research
+configurable-nukes-jericho-research-ingredients=[item=cn-jericho]Science packs required for jericho research
+configurable-nukes-jericho-research-time=[item=cn-jericho]Time per science pack for jericho research
+configurable-nukes-jericho-research-count=[item=cn-jericho]Research count for jericho research
+
+configurable-nukes-tesla-rocket-research-prerequisites=[item=cn-tesla-rocket]Prerequisite technology to mjölnir research
+configurable-nukes-tesla-rocket-research-ingredients=[item=cn-tesla-rocket]Science packs required for mjölnir research
+configurable-nukes-tesla-rocket-research-time=[item=cn-tesla-rocket]Time per science pack for mjölnir research
+configurable-nukes-tesla-rocket-research-count=[item=cn-tesla-rocket]Research count for mjölnir research
 
 configurable-nukes-icbms-research-prerequisites=[technology=icbms]Prerequisite technology to ICBMs research
 configurable-nukes-icbms-research-ingredients=[technology=icbms]Science packs required for ICBMs reseach
@@ -128,6 +156,14 @@ configurable-nukes-atomic-warhead-fire-wave=When enabled, will set things on fir
 configurable-nukes-atomic-warhead-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...\n\ne.g.\n    processing-unit=100,explosives=100,uranium-235=300
 configurable-nukes-atomic-warhead-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
 configurable-nukes-atomic-warhead-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
+
+configurable-nukes-jericho-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...
+configurable-nukes-jericho-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
+configurable-nukes-jericho-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
+
+configurable-nukes-tesla-rocket-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...
+configurable-nukes-tesla-rocket-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
+configurable-nukes-tesla-rocket-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
 
 configurable-nukes-atomic-warhead-research-prerequisites=Defines the technologies required to research atomic-warheads. Expected syntax is as follows:\n\n    technology-name-1,technology-name-2, etc...\n\ne.g.\n    "atomic-bomb,rocket-silo,space-science-pack"
 configurable-nukes-atomic-warhead-research-ingredients=Defines the science-packs and amounts of each required for one research cycle. Expected syntax is as follows:\n\n    science-pack-name-1=amount-1,science-pack-name-2=amount-2, etc...\n\ne.g.\n    "automation-science-pack=1,logistic-science-pack=1,chemical-science-pack=1,military-science-pack=1.utility-science-pack=1,production-science-pack=1,space-science-pack=1"
