feature/0.8.x Added some missing mod setting descriptions

--- a/configurable-nukes/locale/en/recipe.cfg
+++ b/configurable-nukes/locale/en/recipe.cfg
@@ -70,6 +70,9 @@ configurable-nukes-rod-from-god-result-count=Number of items created per craftin
 configurable-nukes-jericho-crafting-time=Crafting time in seconds
 configurable-nukes-jericho-result-count=Number of items created per crafting cycle
 
+configurable-nukes-tesla-rocket-crafting-time=Crafting time in seconds
+configurable-nukes-tesla-rocket-result-count=Number of items created per crafting cycle
+
 configurable-nukes-rocket-control-unit-crafting-time=Crafting time in seconds
 configurable-nukes-rocket-control-unit-result-count=Number of items created per crafting cycle
 
