--- a/configurable-nukes/locale/en/startup.cfg
+++ b/configurable-nukes/locale/en/startup.cfg
@@ -157,6 +157,14 @@ configurable-nukes-atomic-warhead-recipe=Defines the ingredients and amounts of 
 configurable-nukes-atomic-warhead-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
 configurable-nukes-atomic-warhead-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
 
+configurable-nukes-payload-vehicle-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...
+configurable-nukes-payload-vehicle-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
+configurable-nukes-payload-vehicle-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
+
+configurable-nukes-rod-from-god-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...
+configurable-nukes-rod-from-god-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
+configurable-nukes-rod-from-god-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
+
 configurable-nukes-jericho-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...
 configurable-nukes-jericho-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
 configurable-nukes-jericho-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
