bug-fix/performance Fixed migration potentially wouldn't apply properly depending on previous version; added 'Surface processing rate' setting; optimized heavily the previously on_tick processing/circuit-network launching of rockets (now on_nth_tick and is configurable from the aforementioned setting)

--- a/configurable-nukes/locale/en/runtime-global.cfg
+++ b/configurable-nukes/locale/en/runtime-global.cfg
@@ -43,6 +43,7 @@ configurable-nukes-icbms-circuit-print-pin-targets=[item=constant-combinator]Pin
 
 configurable-nukes-circuit-allow-launch-when-no-surface-selected=[item=constant-combinator]Allow circuit initiated launches with no surface selected
 
+configurable-nukes-surface-processing-rate=Surface processing rate
 configurable-nukes-num-surfaces-processed-per-tick=Number of surfaces processed per tick
 
 configurable-nukes-dashboard-refresh-rate=Dashboard refresh rate
@@ -76,6 +77,7 @@ configurable-nukes-icbms-circuit-print-pin-targets=Whether to create a map pin a
 
 configurable-nukes-circuit-allow-launch-when-no-surface-selected=When attempting to initiate a launch via a circuit-network, whether to allow launching at the rocket-silo's origin surface, or not, without needing to select a surface from the dropdown.
 
-configurable-nukes-num-surfaces-processed-per-tick=The amount of surfaces to process per tick cycle.\n\ni.e. How many surfaces to check if a payload is ready to be delivered per tick cycle.\n\nThe higher the number, the more accurate payload delivery time will be - but may also reduce performance if set too high.\n\nSimilarly, the same considerations apply to circuit-network connected silos: i.e. the higher number, the more responsive and exact circuit-network processing will be, with the trade-off of potentially inferior overall performance.
+configurable-nukes-surface-processing-rate=Defines the 'nth' tick that surface processing occurs on.\n\nDefault of 6, i.e. processing will occur 10 times a second (60 ticks per second)
+configurable-nukes-num-surfaces-processed-per-tick=The amount of surfaces to process per tick cycle.\n\ni.e. How many surfaces, per tick cycle, to try and launch circuit-network connected rocket-silos from.
 
 configurable-nukes-dashboard-refresh-rate=Rate at which the dashboard GUI is updated. Affects how up-to-date the "Time" column of the dashboard is.\n\ni.e. The dashboard is refreshed every 'n' ticks, where 'n' is the value from this setting.
