bug-fix/0.8.x Trying to optimize where possible: caching in the hopes of improved performance

--- a/configurable-nukes/locale/en/startup.cfg
+++ b/configurable-nukes/locale/en/startup.cfg
@@ -146,7 +146,7 @@ configurable-nukes-nuclear-ammo-category=Creates a distinct ammo category for nu
 
 configurable-nukes-quality-base-multiplier=The base value which is raised to the quality level; which is then used to multiply the given quality affected property (AoE, Repeat, Damage)
 
-configurable-nukes-fire-wave=When enabled, will set things on fire within the blast radius.
+configurable-nukes-fire-wave=When enabled, will set things on fire within the blast radius. Be aware, can be performance intensive at higher quality levels/AoE settings.
 configurable-nukes-atomic-bomb-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...\n\ne.g.\n    processing-unit=10,explosives=10,uranium-235=30
 configurable-nukes-atomic-bomb-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the vanilla recipe will be used.\n\nWhen enabled, allows for free crafting of nukes if no ingredients are provided in the "Recipe" setting.
 configurable-nukes-atomic-bomb-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
