feature/0.9.x Properly implemented the payload-vehicle; fixed 'Rod from God' stack size setting not doing anything; reduced tesla-rocket tesla-ammo cost from 100 -> 25; added a few settings related to the payload-vehicle implementation

--- a/configurable-nukes/locale/en/items.cfg
+++ b/configurable-nukes/locale/en/items.cfg
@@ -8,6 +8,7 @@ configurable-nukes-atomic-warhead-cooldown-modifier=[item=atomic-warhead]Cooldow
 configurable-nukes-atomic-warhead-stack-size=[item=atomic-warhead]Stack size
 configurable-nukes-atomic-warhead-weight-modifier=[item=atomic-warhead]Weight modifier
 
+configurable-nukes-payload-vehicle-inventory-size=[item=cn-payload-vehicle]Inventory size
 configurable-nukes-payload-vehicle-stack-size=[item=cn-payload-vehicle]Stack size
 configurable-nukes-payload-vehicle-weight-modifier=[item=cn-payload-vehicle]Weight modifier
 
@@ -37,7 +38,7 @@ configurable-nukes-atomic-bomb-weight-modifier=Multiplier of the default weight 
 
 configurable-nukes-atomic-warhead-weight-modifier=Multiplier of the default weight of a atomic warhead\n\n i.e. default = 1 * tons
 
-configurable-nukes-payload-vehicle-weight-modifier=Multiplier of the default weight of a payload vehicle\n\n i.e. default = 1 * tons
+configurable-nukes-payload-vehicle-weight-modifier=Multiplier of the default weight of a payload vehicle\n\n i.e. default = (1 / 3) * tons
 
 configurable-nukes-rod-from-god-weight-modifier=Multiplier of the default weight of a rod from god\n\n i.e. default = 1 * tons
 
