--- a/configurable-nukes/locale/en/locale.cfg
+++ b/configurable-nukes/locale/en/locale.cfg
@@ -19,12 +19,17 @@ kr-nuclear-turret-rocket-projectile=Nuclear Turret Rocket
 atomic-warhead=Expensive yet devastating form of weaponry. Even more powerful version of the atomic bomb, but only fireable from a rocket-silo via an ICBM-remote [item=ICBM-remote] or via a circuit network.
 ipbm-rocket-silo=Rocket silo capable of local orbital logistics, as well as launching and deliverying payloads across interplanetary distances.
 se-ipbm-rocket-silo=Rocket silo capable of launching and deliverying payloads across vast interplanetary and interstellar distances.
+payloader=Assembling machine dedicated to loading/unloading payloads for __ITEM__cn-payload-vehicle__ items [item=cn-payload-vehicle]\n\nContains an "input" container, and an "output" container.\nSelect the recipe to set the desired mode.\n\nAssembling machine, as well as input and output containers can all be connected to circuit-networks.
+
+[item-limitation]
+cn-payload-vehicle=Only ammo, capsule, or payload modifier items (explosives) are alllowed.
 
 [item-name]
 atomic-warhead=Atomic Warhead
 ICBM-remote=ICBM remote
 rocket-control-unit=Rocket Control Unit
 ipbm-rocket-silo=Interplanetary Ballistic Rocket Silo
+payloader=Payloader
 
 ipbm-rocket-part=Interplanetary Ballistic Rocket Part
 ipbm-rocket-part-basic=Interplanetary Ballistic Rocket Part
@@ -48,6 +53,7 @@ cn-tesla-rocket=Mjölnir
 atomic-warhead=Expensive yet devastating form of weaponry. Even more powerful version of the atomic bomb, but only fireable from a rocket-silo via an ICBM-remote [item=ICBM-remote] or via a circuit network.
 ipbm-rocket-silo=Rocket silo capable of local orbital logistics, as well as launching and deliverying payloads across interplanetary distances.
 se-ipbm-rocket-silo=Rocket silo capable of launching and deliverying payloads across vast interplanetary and interstellar distances.
+cn-payload-vehicle=The literal vehicle that delivers the provided payload(s). Contains an internal inventory that can be loaded/unloaded either manually, or automated with the use of a __ITEM__payloader__ crafting machine [item=payloader].\n\nAll ammo and capsule items should be valid payloads; providing explosives will increase the spread of the provided payload(s).\n\nNote: explosives are not a payload themselves, they are only a payload modifier. Launching a payload-vehicle with only explosives loaded, when delivered, will have no effect.
 
 [modifier-description]
 nuclear-damage-bonus=Nuclear damage: +__1__
@@ -81,6 +87,11 @@ cn-payload-vehicle=Payload Vehicle
 cn-rod-from-god=Rod from God
 cn-jericho=Jericho
 cn-tesla-rocket=Mjölnir
+
+payloader=Payloader
+payload-modify=Modify payload
+payload-add=Add payload
+payload-remove=Remove payload
 
 [technology-name]
 atomic-warhead=Atomic Warhead
