--- a/configurable-nukes/locale/en/messages.cfg
+++ b/configurable-nukes/locale/en/messages.cfg
@@ -12,12 +12,12 @@ seconds-to-target-gps=Seconds to Target-__1__: __2__ [gps=__3__,__4__,__5__]
 on-configuration-changed=__1__: Version change detected
 
 [initialization]
-init=Initializing Configurable Nukes
-reinit=Reinitializing Configurable Nukes
-initialization-anew=__1__: Initializing anew
-initialization-complete=__1__: Initialization complete
-migrate-start=__1__: Migrating existing data
-migrate-finish=__1__: Migration complete
+cn-init=__1__: Initializing
+cn-reinit=__1__: Reinitializing
+cn-initialization-anew=__1__: Initializing anew
+cn-initialization-complete=__1__: Initialization complete
+cn-migrate-start=__1__: Migrating existing data
+cn-migrate-finish=__1__: Migration complete
 
 [rocket-silo-utils]
 scrub-launch=Scrubbing launch: __1__
