--- a/configurable-nukes/locale/en/runtime-global.cfg
+++ b/configurable-nukes/locale/en/runtime-global.cfg
@@ -1,4 +1,5 @@
 [mod-setting-name]
+configurable-nukes-legacy-launch-system-enabled=[item=ICBM-remote]Use legacy launch system
 configurable-nukes-atomic-bomb-rocket-launchable=[item=atomic-bomb]Launchable via rocket-silo
 configurable-nukes-pollution=[item=atomic-bomb]Atomic bomb pollution
 configurable-nukes-atomic-warhead-pollution=[item=atomic-warhead]Atomic warhead pollution
@@ -43,12 +44,15 @@ configurable-nukes-icbms-circuit-print-pin-targets=[item=constant-combinator]Pin
 
 configurable-nukes-circuit-allow-launch-when-no-surface-selected=[item=constant-combinator]Allow circuit initiated launches with no surface selected
 
+configurable-nukes-payload-explosives-aoe-multiplier=[item=cn-payload-vehicle]+[item=explosives]Payload explosives AoE multiplier
+
 configurable-nukes-surface-processing-rate=Surface processing rate
 configurable-nukes-num-surfaces-processed-per-tick=Number of surfaces processed per tick
 
 configurable-nukes-dashboard-refresh-rate=Dashboard refresh rate
 
 [mod-setting-description]
+configurable-nukes-legacy-launch-system-enabled=Whether to use the launch system that existsed prior to version 0.9.0\n\nIf enabled, payload-vehicles are not necessary for launching an ICBM (payloads can be directly loaded into the rocket-silo rocket).\n\ni.e. atomic-bombs (if enabled), atomic-warheads, jerichos, mjölnirs, and "Rods from God" can all be directly loaded into a rocket-silo rocket, and subsequently launched at a given target. Anything else intended as a payload must be loaded into a payload-vehicle, even when this setting is set to true.
 configurable-nukes-atomic-bomb-rocket-launchable=Whether atomic-bombs can be launched as payload from a rocket-silo.
 
 configurable-nukes-icbms-allow-multisurface=Allows for a rocket-silo with a valid payload to initiate a launch against a surface that is different than the surface the rocket-silo is located on.\n\nIf enabled, allows ICBMs to function as IPBMs, albeit slower and less accurate.
