bug-fix/0.9.x Added proper configurable settings for the payloader

--- a/configurable-nukes/locale/en/recipe.cfg
+++ b/configurable-nukes/locale/en/recipe.cfg
@@ -11,6 +11,10 @@ configurable-nukes-payload-vehicle-crafting-time=[item=cn-payload-vehicle]Payloa
 configurable-nukes-payload-vehicle-input-multiplier=[item=cn-payload-vehicle]Input multiplier
 configurable-nukes-payload-vehicle-result-count=[item=cn-payload-vehicle]Result count
 
+configurable-nukes-payloader-crafting-time=[item=payloader]Payloader crafting time
+configurable-nukes-payloader-input-multiplier=[item=payloader]Input multiplier
+configurable-nukes-payloader-result-count=[item=payloader]Result count
+
 configurable-nukes-rod-from-god-crafting-time=[item=cn-rod-from-god]Rod from god crafting time
 configurable-nukes-rod-from-god-input-multiplier=[item=cn-rod-from-god]Input multiplier
 configurable-nukes-rod-from-god-result-count=[item=cn-rod-from-god]Result count
@@ -63,6 +67,9 @@ configurable-nukes-atomic-warhead-result-count=Number of items created per craft
 
 configurable-nukes-payload-vehicle-crafting-time=Crafting time in seconds
 configurable-nukes-payload-vehicle-result-count=Number of items created per crafting cycle
+
+configurable-nukes-payloader-crafting-time=Crafting time in seconds
+configurable-nukes-payloader-result-count=Number of items created per crafting cycle
 
 configurable-nukes-rod-from-god-crafting-time=Crafting time in seconds
 configurable-nukes-rod-from-god-result-count=Number of items created per crafting cycle
