--- a/configurable-nukes/locale/en/items.cfg
+++ b/configurable-nukes/locale/en/items.cfg
@@ -9,8 +9,10 @@ configurable-nukes-atomic-warhead-stack-size=[item=atomic-warhead]Stack size
 configurable-nukes-atomic-warhead-weight-modifier=[item=atomic-warhead]Weight modifier
 
 configurable-nukes-payload-vehicle-inventory-size=[item=cn-payload-vehicle]Inventory size
-configurable-nukes-payload-vehicle-stack-size=[item=cn-payload-vehicle]Stack size
 configurable-nukes-payload-vehicle-weight-modifier=[item=cn-payload-vehicle]Weight modifier
+
+configurable-nukes-payloader-stack-size=[item=payloader]Stack size
+configurable-nukes-payloader-weight-modifier=[item=payloader]Weight modifier
 
 configurable-nukes-rod-from-god-stack-size=[item=cn-rod-from-god]Stack size
 configurable-nukes-rod-from-god-weight-modifier=[item=cn-rod-from-god]Weight modifier
@@ -39,6 +41,8 @@ configurable-nukes-atomic-bomb-weight-modifier=Multiplier of the default weight 
 configurable-nukes-atomic-warhead-weight-modifier=Multiplier of the default weight of a atomic warhead\n\n i.e. default = 1 * tons
 
 configurable-nukes-payload-vehicle-weight-modifier=Multiplier of the default weight of a payload vehicle\n\n i.e. default = (1 / 3) * tons
+
+configurable-nukes-payloader-weight-modifier=Multiplier of the default weight of a payloader\n\n i.e. default = (1 / 5) * tons
 
 configurable-nukes-rod-from-god-weight-modifier=Multiplier of the default weight of a rod from god\n\n i.e. default = 1 * tons
 
