--- a/configurable-nukes/locale/en/startup.cfg
+++ b/configurable-nukes/locale/en/startup.cfg
@@ -27,6 +27,11 @@ configurable-nukes-payload-vehicle-recipe-allow-none=[item=cn-payload-vehicle]Al
 configurable-nukes-payload-vehicle-crafting-machine=[item=cn-payload-vehicle]Payload vehicle crafting machine
 configurable-nukes-payload-vehicle-additional-crafting-machines=[item=cn-payload-vehicle]Additional payload vehicle crafting machines
 
+configurable-nukes-payloader-recipe=[item=payloader]Recipe
+configurable-nukes-payloader-recipe-allow-none=[item=payloader]Allow no recipe
+configurable-nukes-payloader-crafting-machine=[item=payloader]Payloader crafting machine
+configurable-nukes-payloader-additional-crafting-machines=[item=payloader]Additional payloader crafting machines
+
 configurable-nukes-rod-from-god-area-multiplier=[item=cn-rod-from-god]Area of Effect Multiplier
 configurable-nukes-rod-from-god-damage-multiplier=[item=cn-rod-from-god]Damage Multiplier
 configurable-nukes-rod-from-god-repeat-multiplier=[item=cn-rod-from-god]Repeat Multiplier
@@ -154,23 +159,27 @@ configurable-nukes-atomic-bomb-additional-crafting-machines=Comma separated list
 configurable-nukes-atomic-warhead-enabled=Expensive yet devastating form of weaponry. Even more powerful version of the atomic bomb, but only fireable from a rocket-silo via an ICBM-remote [item=ICBM-remote]
 configurable-nukes-atomic-warhead-fire-wave=When enabled, will set things on fire within the blast radius.
 configurable-nukes-atomic-warhead-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...\n\ne.g.\n    processing-unit=100,explosives=100,uranium-235=300
-configurable-nukes-atomic-warhead-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
+configurable-nukes-atomic-warhead-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting if no ingredients are provided in the "Recipe" setting.
 configurable-nukes-atomic-warhead-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
 
 configurable-nukes-payload-vehicle-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...
-configurable-nukes-payload-vehicle-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
+configurable-nukes-payload-vehicle-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting if no ingredients are provided in the "Recipe" setting.
 configurable-nukes-payload-vehicle-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
 
+configurable-nukes-payloader-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...
+configurable-nukes-payloader-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting if no ingredients are provided in the "Recipe" setting.
+configurable-nukes-payloader-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
+
 configurable-nukes-rod-from-god-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...
-configurable-nukes-rod-from-god-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
+configurable-nukes-rod-from-god-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting if no ingredients are provided in the "Recipe" setting.
 configurable-nukes-rod-from-god-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
 
 configurable-nukes-jericho-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...
-configurable-nukes-jericho-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
+configurable-nukes-jericho-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting if no ingredients are provided in the "Recipe" setting.
 configurable-nukes-jericho-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
 
 configurable-nukes-tesla-rocket-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...
-configurable-nukes-tesla-rocket-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
+configurable-nukes-tesla-rocket-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting if no ingredients are provided in the "Recipe" setting.
 configurable-nukes-tesla-rocket-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
 
 configurable-nukes-atomic-warhead-research-prerequisites=Defines the technologies required to research atomic-warheads. Expected syntax is as follows:\n\n    technology-name-1,technology-name-2, etc...\n\ne.g.\n    "atomic-bomb,rocket-silo,space-science-pack"
@@ -189,7 +198,7 @@ configurable-nukes-ipbms-research-time=How much time one unit takes to research.
 configurable-nukes-ipbms-research-count=Defines how many research cycles are needed to complete the research.
 
 configurable-nukes-rocket-control-unit-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...\n\ne.g.\n    processing-unit=4,speed-module=2,efficiency-module=2,radar=1,battery=8
-configurable-nukes-rocket-control-unit-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
+configurable-nukes-rocket-control-unit-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting if no ingredients are provided in the "Recipe" setting.
 configurable-nukes-rocket-control-unit-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
 
 configurable-nukes-ballistic-rocket-silo-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...
