bug-fix/0.9.x Added custom-input for the ICBM-remote; improved the 'randomness' used in payload delivery (improved the Rhythm global object); fixed multiple payloads targeting the same position and/or about the same tick, not being delivered properly/at all; background payload cleaning should now remove orphaned payloads/from previous versions; added configurable runtime setting to control the rate of background payload cleaning

--- a/configurable-nukes/locale/en/runtime-global.cfg
+++ b/configurable-nukes/locale/en/runtime-global.cfg
@@ -51,6 +51,8 @@ configurable-nukes-num-surfaces-processed-per-tick=Number of surfaces processed 
 
 configurable-nukes-dashboard-refresh-rate=Dashboard refresh rate
 
+configurable-nukes-payload-background-cleaning-rate=Payload background cleaning rate
+
 [mod-setting-description]
 configurable-nukes-legacy-launch-system-enabled=Whether to use the launch system that existsed prior to version 0.9.0\n\nIf enabled, payload-vehicles are not necessary for launching an ICBM (payloads can be directly loaded into the rocket-silo rocket).\n\ni.e. atomic-bombs (if enabled), atomic-warheads, jerichos, mjölnirs, and "Rods from God" can all be directly loaded into a rocket-silo rocket, and subsequently launched at a given target. Anything else intended as a payload must be loaded into a payload-vehicle, even when this setting is set to true.
 configurable-nukes-atomic-bomb-rocket-launchable=Whether atomic-bombs can be launched as payload from a rocket-silo.
@@ -84,4 +86,6 @@ configurable-nukes-circuit-allow-launch-when-no-surface-selected=When attempting
 configurable-nukes-surface-processing-rate=Defines the 'nth' tick that surface processing occurs on.\n\nDefault of 6, i.e. processing will occur 10 times a second (60 ticks per second)
 configurable-nukes-num-surfaces-processed-per-tick=The amount of surfaces to process per tick cycle.\n\ni.e. How many surfaces, per tick cycle, to try and launch circuit-network connected rocket-silos from.
 
-configurable-nukes-dashboard-refresh-rate=Rate at which the dashboard GUI is updated. Affects how up-to-date the "Time" column of the dashboard is.\n\ni.e. The dashboard is refreshed every 'n' ticks, where 'n' is the value from this setting.
+configurable-nukes-dashboard-refresh-rate=Rate at which the dashboard GUI is updated. Affects how up-to-date the "Time" column of the dashboard is.\n\ni.e. The dashboard is refreshed every 'n' ticks, where 'n' is the value from this setting. (60 ticks per second)
+
+configurable-nukes-payload-background-cleaning-rate=Rate at which payloads are cleaned up/removed from storage after delivery. Processes every 'n' ticks, where 'n' is the value from this setting. (60 ticks per second)\n\nPayloads nominally clean up after themselves immediately upon delivery; this is acts as an additional safeguard, as well as to remove any old payloads from previous versions.\n\nShould be safe in theory to set to a higher value than default.
