bug-fix/0.9.x Fixed (?) another startup error (believe related to type 'land-mine' items' 'source-effects' property); added 'Debug startup payload processing' setting; Payloader recipes should now be selectable from the signal GUI

--- a/configurable-nukes/locale/en/startup.cfg
+++ b/configurable-nukes/locale/en/startup.cfg
@@ -146,6 +146,8 @@ configurable-nukes-guidance-systems-research-prerequisites=[technology=guidance-
 configurable-nukes-guidance-systems-research-ingredients=[technology=guidance-systems]Science packs required for guidance systems targeting reseach
 configurable-nukes-guidance-systems-research-time=[technology=guidance-systems]Time per science pack for guidance systems targeting research
 
+configurable-nukes-debug-payload-startup-processing=Debug startup payload processing
+
 [mod-setting-description]
 configurable-nukes-nuclear-ammo-category=Creates a distinct ammo category for nuclear weapons, i.e. atomic bombs and warheads; also adds an infinite research for nuclear weapons damage.
 
@@ -238,3 +240,5 @@ configurable-nukes-nuclear-weapons-research-formula=Formula by which the researc
 configurable-nukes-nuclear-weapons-research-prerequisites=Defines the technologies required to research nuclear weapons damage. Expected syntax is as follows:\n\n    technology-name-1,technology-name-2, etc...\n\ne.g.\n    "atomic-bomb,rocket-silo,space-science-pack"
 configurable-nukes-nuclear-weapons-research-ingredients=Defines the science-packs and amounts of each required for one research cycle. Expected syntax is as follows:\n\n    science-pack-name-1=amount-1,science-pack-name-2=amount-2, etc...\n\ne.g.\n    "automation-science-pack=1,logistic-science-pack=1,chemical-science-pack=1,military-science-pack=1.utility-science-pack=1,production-science-pack=1,space-science-pack=1"
 configurable-nukes-nuclear-weapons-research-time=How much time one unit takes to research. In a lab with a crafting speed of 1, it corresponds to the number of seconds.
+
+configurable-nukes-debug-payload-startup-processing=If enabled, will log debug information when processing/creating potential payloads from existing ammo, capsules, and/or landmines.\n\nNamely intended for development purposes; that being, narrowing down/tracing potential compatibility issues/errors.\n\nNo need to enable under normal circumstances - feel free to be curious, though.
